# tangela-etl

./: .env.example  .gitignore  README.md  docker-compose.isolation.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
docs/: BOOTSTRAP.md  DESIGN.md  REVIEW.md  REVIEW.v3.md  TUTORIAL.md  TUTORIAL.v2.md  TUTORIAL.v3.md  TUTORIAL.v4.md
scripts/: prototype.py  sandbox_es_extract.py  sandbox_kafka_consume.py  seed.py  setup_local.sh  teardown_local.sh  try_es_extract.py
src/es_extract/: __init__.py  diagnostics.py  errors.py  extract.py  pagination.py
src/etl/: __main__.py  config.py  control_consumer.py  csv_writer.py  errors.py  extractor.py  job_loader.py  logging_setup.py  models.py  pipeline.py  retry.py  sftp_uploader.py  transformer.py  validator.py
src/etl/pagination/: __init__.py  base.py  scroll.py  search_after.py
tests/: conftest.py  test_adversarial.py  test_config.py  test_control_consumer.py  test_csv_writer.py  test_es_extract.py  test_extractor.py  test_job_loader.py  test_logging.py  test_models.py  test_pipeline.py  test_retry.py  test_sftp_uploader.py  test_transformer.py  test_validator.py
tests/pagination/: test_scroll.py  test_search_after.py
