[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kafka-es-csv-sftp-etl"
version = "0.1.0"
description = "Control-driven ETL: Kafka control topic -> Elasticsearch -> dotted-path projection -> CSV -> SFTP"
requires-python = ">=3.10"
dependencies = [
    "confluent-kafka>=2.3",
    "elasticsearch>=8.0,<9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
etl = "etl.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["etl", "es_extract"]
mypy_path = "src"
